Fix color contrast for links when hovered

--- a/src/components/StructuredNavigation/StructuredNavigation.scss
+++ b/src/components/StructuredNavigation/StructuredNavigation.scss
@@ -8,7 +8,7 @@
     transition: 0.25s;
 
     &:hover {
-      color: $primary;
+      color: $primaryDarker;
     }
   }
 
